--- a/templates/peliculas/create.html
+++ b/templates/peliculas/create.html
@@ -1,24 +1,70 @@
+{% include 'header.html' %}
+
+{% with messages= get_flashed_messages()%}
+
+{% if messages %}
+   <div class="alert alert-danger" role="alert">
+    {% for message in messages %}
+        {{message}}
+    {% endfor %}
+   </div>
+
+{% endif %}
+
+{% endwith %}
+
+<br><br>
 <form method="post" action="/store" enctype="multipart/form-data">
 
-    Nombre:
-    <input type="text" name="txtNombre" id="txtNombre">
-    <br>
 
-    Telefono:
-    <input type="text" name="txtTelefono" id="txtTelefono">
-    <br>
+    <div class="card">
+        <div class="card-header">
+            Datos de la pelicula
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Datos</h5>
+            <p class="card-text">
 
-    Pelicula:
-    <input type="text" name="txtpelicula" id="txtpelicula">
-    <br>
 
-    Estado:
-    <input type="text" name="txtEstado" id="txtEstado">
-    <br>
+              <div class="form-group">
+                  <label for="txtNombre">Nombre:</label>
+                  <input id="txtNombre" class="form-control" type="text" name="txtNombre">
+              </div>
 
-    Foto:
-    <input type="file" name="txtFoto" id="txtFoto">
-    <br>
-    <br>
-    <input type="submit" value="Agregar">
+              <div class="form-group">
+                  <label for="txtTelefono">Telefono:</label>
+                  <input id="txtTelefono" class="form-control" type="text" name="txtTelefono">
+              </div>
+
+              <div class="form-group">
+                  <label for="txtpelicula">Pelicula:</label>
+                  <input id="txtpelicula" class="form-control" type="text" name="txtpelicula">
+              </div>
+
+              <div class="form-group">
+                  <label for="txtEstado">Estado:</label>
+                  <input id="txtEstado" class="form-control" type="text" name="txtEstado">
+              </div>
+
+              <div class="form-group">
+                  <label for="txtFoto">Foto:</label>
+                  <input id="txtFoto" class="form-control" type="file" name="txtFoto">
+              </div>
+
+              <div class="form-group">
+
+                <input type="submit" class="btn btn-success" value="Agregar">
+                <a href="{{url_for('index')}}" class="btn btn-primary" >Regresar</a>
+                  
+              </div>
+
+            
+
+
+
+            </p>
+        </div>
+    </div>
+
 </form>
+{% include 'footer.html' %}
